# upm

./: .clang-tidy  .gitignore  .gitmodules  .ignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: build.yaml
docs/: Developers.md  How-it-works.md  Installing.md  Managing-upm.md  README.md  ReservedPaths.md  Syntax.md  Uninstalling.md  Updates.md
docs/dev/: Developers.md
docs/lua/: Context.md  Git.md  Lua.md  README.md  Tutorial.md
docs/usage/: install-scripts.md
lua/: git-quick-stats.lua  metadata.json  nodejs.lua  renderdoc.lua  upm.lua  vim.lua
src/: CMakeLists.txt
src/gamma/: InstallationResolver.hpp  Main.cpp
src/gamma/package/: Package.hpp  PackageResolver.cpp  PackageResolver.hpp
src/gamma/util/: StrUtil.cpp  StrUtil.hpp
src/upm/: Context.cpp  Context.hpp  InstallationResolver.hpp  Main.cpp  VersionManager.hpp
src/upm/api/: Constants.hpp  Context.cpp  Context.hpp  Exec.cpp  Exec.hpp  Filesystem.cpp  Filesystem.hpp  Git.cpp  Git.hpp  LuaHelper.cpp  LuaHelper.hpp  Network.cpp  Network.hpp
src/upm/api/io/: LogAPI.cpp  LogAPI.hpp
src/upm/api/json/: JSON.cpp  JSON.hpp
src/upm/api/stdfunc/: Activators.cpp  Activators.hpp  VersionResolvers.cpp  VersionResolvers.hpp
src/upm/api/util/: ArgHelper.cpp  ArgHelper.hpp
src/upm/conf/: Config.cpp  Config.hpp  Constants.hpp
src/upm/input/: Parser.cpp  Parser.hpp
src/upm/package/: Activators.cpp  Activators.hpp  Package.hpp  PackageResolver.cpp  PackageResolver.hpp  VersionResolvers.cpp  VersionResolvers.hpp
src/upm/platform/: Platform.hpp
src/upm/util/: PathUtils.hpp  StrUtil.cpp  StrUtil.hpp  String.cpp  String.hpp  Version.cpp  Version.hpp
src/upm/util/syscompat/: Nproc.cpp  Nproc.hpp
src/upm/vm/: VersionManager.hpp
tests/: CMakeLists.txt
tests/src/: JSONAPITest.cpp  LuaHelperTests.cpp  MetaTests.cpp  StringTest.cpp  VersionTest.cpp
tools/: install.sh
